--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ SHOPIFY_API_KEY=f407beb8cca59260ce936842917934cd
 SHOPIFY_API_SECRET_KEY=c537296e3cc78220350920f12d7c23d7
 SCOPES=write_customers,write_orders,write_products
 # Leave HOST empty in dev mode, it will be auto generated.
-HOST=Your Apps Url
+HOST=
 SHOP=brewedonline.myshopify.com
 NGROK_AUTH_TOKEN=2QpjeJ2T8oFJwCBBw9TLTUA8URW_3JXEUZzEuobye3sBPWqaw
 UPSTASH_REDIS_REST_URL=
